--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
-      - dev-static-data:/vol/web
+      - dev-static-data:/vol/web/static
+      - dev-media-data:/vol/web/media
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -21,6 +22,7 @@ services:
       - DB_USER=devuser
       - DB_PASS=changeme
       - DEBUG=1
+      - ALLOWED_HOSTS=*
     depends_on:
       - db
 
@@ -36,3 +38,4 @@ services:
 volumes:
   dev-db-data:
   dev-static-data:
+  dev-media-data:
