--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -2,23 +2,30 @@ FROM nginxinc/nginx-unprivileged:1-alpine
 LABEL maintainer="londonappdeveloper.com"
 
 COPY ./default.conf.tpl /etc/nginx/default.conf.tpl
-COPY ./uwsgi_params /etc/nginx/uwsgi_params
+COPY ./gunicorn_headers /etc/nginx/gunicorn_headers
 COPY ./run.sh /run.sh
+
 
 ENV LISTEN_PORT=8000
 ENV APP_HOST=app
-ENV APP_PORT=9000
+ENV APP_PORT=8000   
+
 
 USER root
 
-RUN mkdir -p /vol/static && \
-    chmod 755 /vol/static && \
+RUN mkdir -p /vol/static /vol/media && \
+    chmod 755 /vol && \
+    chown -R nginx:nginx /vol && \
     touch /etc/nginx/conf.d/default.conf && \
     chown nginx:nginx /etc/nginx/conf.d/default.conf && \
     chmod +x /run.sh
 
+
 VOLUME /vol/static
+VOLUME /vol/media
+
 
 USER nginx
+
 
 CMD ["/run.sh"]
