--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -10,4 +10,5 @@ jobs:
     uses: ./.github/workflows/test-and-lint.yml
     secrets:
       DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}  # use the correct secret name
+
