--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,9 +6,7 @@ on:
 
 jobs:
   test-lint:
-    name: Test and Lint
     uses: ./.github/workflows/test-and-lint.yml
     secrets:
-      DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}  # use the correct secret name
-
+      DOCKERHUB_USER: ${{ secrets.DOCKER_USERNAME }}  # maps to your actual secret
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}    # maps to your actual secret
