--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,8 +6,8 @@ on:
 
 jobs:
   test-lint:
-    name: Test and Lint
     uses: ./.github/workflows/test-and-lint.yml
     secrets:
-      DOCKERHUB_USER: ${{ vars.DOCKERHUB_USER }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      DOCKERHUB_USER: ${{ secrets.DOCKER_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+  
