added push to ECR

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,11 +7,7 @@ on:
 jobs:
   test-lint:
     uses: ./.github/workflows/test-and-lint.yml
+    with: {}
     secrets:
-test-pr
-      DOCKERHUB_USER: ${{ secrets.DOCKER_USERNAME }}  # maps to your actual secret
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}    # maps to your actual secret
-      DOCKERHUB_USER: ${{ secrets.DOCKER_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}
-  
- main
+      DOCKERHUB_USER: ${{ secrets.DOCKER_USERNAME }} 
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}    
