--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -1,53 +1,37 @@
-name: Test and Lint
+name: Checks
 
 on:
-  workflow_call:
-    secrets:
-      DOCKERHUB_USER:
-        required: true
-      DOCKERHUB_TOKEN:
-        required: true
+  pull_request:
+    branches: [main]
 
 jobs:
   python:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Debug Docker secrets
-        run: |
-          echo "Username length: ${#DOCKERHUB_USER}"
-          echo "Token length: ${#DOCKERHUB_TOKEN}"
+      - uses: actions/checkout@v4
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Run Tests
         run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
 
-      - name: Run Flake8 Lint
+      - name: Flake8
         run: docker compose run --rm app sh -c "flake8"
 
   terraform:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Debug Docker secrets
-        run: |
-          echo "Username length: ${#DOCKERHUB_USER}"
-          echo "Token length: ${#DOCKERHUB_TOKEN}"
+      - uses: actions/checkout@v4
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Terraform lint
         run: |
