--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Debug Secrets
+        run: |
+          echo "DOCKERHUB_USER=${{ secrets.DOCKERHUB_USER }}"
+          echo "DOCKERHUB_TOKEN length: ${#{{ secrets.DOCKERHUB_TOKEN }}}"
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -32,6 +37,11 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
+      - name: Debug Secrets
+        run: |
+          echo "DOCKERHUB_USER=${{ secrets.DOCKERHUB_USER }}"
+          echo "DOCKERHUB_TOKEN length: ${#{{ secrets.DOCKERHUB_TOKEN }}}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
