--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Debug Secrets
+      - name: Debug Docker secrets
         run: |
-          echo "DOCKERHUB_USER=${{ secrets.DOCKERHUB_USER }}"
-          echo "DOCKERHUB_TOKEN length: ${#{{ secrets.DOCKERHUB_TOKEN }}}"
+          echo "DOCKERHUB_USER length: ${#DOCKERHUB_USER}"
+          echo "DOCKERHUB_TOKEN length: ${#DOCKERHUB_TOKEN}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -37,11 +37,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
-      - name: Debug Secrets
-        run: |
-          echo "DOCKERHUB_USER=${{ secrets.DOCKERHUB_USER }}"
-          echo "DOCKERHUB_TOKEN length: ${#{{ secrets.DOCKERHUB_TOKEN }}}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
