--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Debug Docker secrets
+      - name: Debug Secrets
         run: |
-          echo "DOCKERHUB_USER length: ${#DOCKERHUB_USER}"
-          echo "DOCKERHUB_TOKEN length: ${#DOCKERHUB_TOKEN}"
+          echo "DOCKERHUB_USER=${{ secrets.DOCKERHUB_USER }}"
+          echo "DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -32,11 +32,17 @@ jobs:
       - name: Run Flake8 Lint
         run: docker compose run --rm app sh -c "flake8"
 
+
   terraform:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
+      - name: Debug Secrets
+        run: |
+          echo "DOCKERHUB_USER=${{ secrets.DOCKERHUB_USER }}"
+          echo "DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -44,7 +50,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Terraform lint
+      - name: Terraform Lint
         run: |
           cd Infra/
           docker compose run --rm terraform -chdir=deploy/ init -backend=false
