--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -41,13 +41,13 @@ jobs:
 
       - name: Debug Secrets
         run: |
-          echo "DOCKERHUB_USER=${{ secrets.DOCKERHUB_USER }}"
+          echo "DOCKERHUB_USER=${{ vars.DOCKERHUB_USER }}"
           echo "DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
+          username: ${{ vars.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Terraform Lint
