--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -12,8 +12,7 @@ jobs:
   python:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Debug Secrets
         run: |
@@ -29,25 +28,18 @@ jobs:
       - name: Run Tests
         run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
 
-      - name: Run Flake8 Lint
+      - name: Run Flake8
         run: docker compose run --rm app sh -c "flake8"
-
 
   terraform:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Debug Secrets
-        run: |
-          echo "DOCKERHUB_USER=${{ secrets.DOCKERHUB_USER }}"
-          echo "DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}"
+      - uses: actions/checkout@v4
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USER }}
+          username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Terraform Lint
