--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -16,9 +16,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Debug DockerHub secrets
+        env:
+          DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
-          echo "DOCKERHUB_USER length: ${#{{ secrets.DOCKERHUB_USER }}}"
-          echo "DOCKERHUB_TOKEN length: ${#{{ secrets.DOCKERHUB_TOKEN }}}"
+          echo "DOCKERHUB_USER length: ${#DOCKERHUB_USER}"
+          echo "DOCKERHUB_TOKEN length: ${#DOCKERHUB_TOKEN}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -39,9 +42,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Debug DockerHub secrets
+        env:
+          DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
-          echo "DOCKERHUB_USER length: ${#{{ secrets.DOCKERHUB_USER }}}"
-          echo "DOCKERHUB_TOKEN length: ${#{{ secrets.DOCKERHUB_TOKEN }}}"
+          echo "DOCKERHUB_USER length: ${#DOCKERHUB_USER}"
+          echo "DOCKERHUB_TOKEN length: ${#DOCKERHUB_TOKEN}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
