--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -12,12 +12,13 @@ jobs:
   python:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Debug Secrets
+      - name: Debug DockerHub secrets
         run: |
-          echo "DOCKERHUB_USER=${{ secrets.DOCKERHUB_USER }}"
-          echo "DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}"
+          echo "DOCKERHUB_USER length: ${#DOCKERHUB_USER}"
+          echo "DOCKERHUB_TOKEN length: ${#DOCKERHUB_TOKEN}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -34,7 +35,8 @@ jobs:
   terraform:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
