--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set vars
+      - name: Set workspace
         run: |
           if [[ $GITHUB_REF == 'refs/heads/prod' ]]; then
             echo "prod" > .workspace
           else
             echo "staging" > .workspace
-        
 
       - name: Push to ECR
         env:
@@ -36,7 +35,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
-          docker build compress -t ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA .
-          docker push ${{ vars.ECR_REPO_APP }}:$GIT_SHA
-          docker build compress -t ${{ vars.ECR_REPO_PROXY }}:$GITHUB_SHA proxy/
-          docker push ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA 
+          docker build -t ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA .
+          docker push ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA
+          docker build -t ${{ vars.ECR_REPO_PROXY }}:$GITHUB_SHA ./proxy
+          docker push ${{ vars.ECR_REPO_PROXY }}:$GITHUB_SHA
