--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,17 +7,9 @@ on:
       - prod
 
 jobs:
-  test-lint:
-    uses: ./.github/workflows/test-and-lint.yml
-    name: Test and Lint
-    secrets:
-      DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-
   deploy:
-    name: Deploy
+    name: Test, Lint, and Deploy
     runs-on: ubuntu-22.04
-    needs: [test-lint]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,6 +22,24 @@ jobs:
             echo "staging" > .workspace
           fi
 
+      # -----------------------
+      # Test and Lint
+      # -----------------------
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Run Tests
+        run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
+
+      - name: Run Flake8
+        run: docker compose run --rm app sh -c "flake8"
+
+      # -----------------------
+      # Deploy to ECR
+      # -----------------------
       - name: Login to ECR
         env:
           AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
