--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,14 +7,22 @@ on:
       - prod
 
 jobs:
+  test-lint:
+    uses: ./.github/workflows/test-and-lint.yml
+    name: Test and Lint
+    secrets:
+      DOCKERHUB_USER: ${{ vars.DOCKERHUB_UESR }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+
   deploy:
-    name: Test, Lint, and Deploy
+    name: Deploy
     runs-on: ubuntu-22.04
+    needs: [test-lint]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set workspace
+      - name: Set vars
         run: |
           if [[ $GITHUB_REF == 'refs/heads/prod' ]]; then
             echo "prod" > .workspace
@@ -22,39 +30,14 @@ jobs:
             echo "staging" > .workspace
           fi
 
-      # -----------------------
-      # Test and Lint
-      # -----------------------
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Run Tests
-        run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
-
-      - name: Run Flake8
-        run: docker compose run --rm app sh -c "flake8"
-
-      # -----------------------
-      # Deploy to ECR
-      # -----------------------
-      - name: Login to ECR
+      - name: Push to ECR
         env:
           AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
-          echo "Logging into ECR..."
           aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
-
-      - name: Build and Push App Image
-        run: |
-          docker build -t ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA .
+          docker build --compress -t ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA .
           docker push ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA
-
-      - name: Build and Push Proxy Image
-        run: |
-          docker build -t ${{ vars.ECR_REPO_PROXY }}:$GITHUB_SHA ./proxy
+          docker build --compress -t ${{ vars.ECR_REPO_PROXY }}:$GITHUB_SHA proxy/
           docker push ${{ vars.ECR_REPO_PROXY }}:$GITHUB_SHA
