--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,14 +32,15 @@ jobs:
 
       - name: Push to ECR
         env:
-          AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
           echo "Logging into ECR..."
-          aws ecr get-login-password --region $AWS_DEFAULT_REGION | tr -d '\r' | docker login --username AWS --password-stdin ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
-          docker build --compress -t ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA .
-          docker push ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA
-          docker build --compress -t ${{ vars.ECR_REPO_PROXY }}:$GITHUB_SHA proxy/
-          docker push ${{ vars.ECR_REPO_PROXY }}:$GITHUB_SHA
+          aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
+          docker build --compress -t ${{ secrets.ECR_REPO_APP }}:$GITHUB_SHA .
+          docker push ${{ secrets.ECR_REPO_APP }}:$GITHUB_SHA
+          docker build --compress -t ${{ secrets.ECR_REPO_PROXY }}:$GITHUB_SHA proxy/
+          docker push ${{ secrets.ECR_REPO_PROXY }}:$GITHUB_SHA
+
 
