--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set vars
+      - name: Set workspace
         run: |
           if [[ $GITHUB_REF == 'refs/heads/prod' ]]; then
             echo "prod" > .workspace
@@ -30,17 +30,28 @@ jobs:
             echo "staging" > .workspace
           fi
 
-      - name: Push to ECR
+      - name: Debug ECR variables
+        run: |
+          echo "AWS_ACCOUNT_ID=${{ vars.AWS_ACCOUNT_ID }}"
+          echo "ECR_REPO_APP=${{ vars.ECR_REPO_APP }}"
+          echo "ECR_REPO_PROXY=${{ vars.ECR_REPO_PROXY }}"
+          echo "GITHUB_SHA=$GITHUB_SHA"
+
+      - name: Login to ECR
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
           echo "Logging into ECR..."
-          aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
-          docker build --compress -t ${{ secrets.ECR_REPO_APP }}:$GITHUB_SHA .
-          docker push ${{ secrets.ECR_REPO_APP }}:$GITHUB_SHA
-          docker build --compress -t ${{ secrets.ECR_REPO_PROXY }}:$GITHUB_SHA proxy/
-          docker push ${{ secrets.ECR_REPO_PROXY }}:$GITHUB_SHA
+          aws ecr get-login-password --region $AWS_DEFAULT_REGION | tr -d '\r' | docker login --username AWS --password-stdin ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
 
+      - name: Build and Push App Image
+        run: |
+          docker build --compress -t ${{ vars.ECR_REPO_APP }}:${GITHUB_SHA::8} .
+          docker push ${{ vars.ECR_REPO_APP }}:${GITHUB_SHA::8}
 
+      - name: Build and Push Proxy Image
+        run: |
+          docker build --compress -t ${{ vars.ECR_REPO_PROXY }}:${GITHUB_SHA::8} proxy/
+          docker push ${{ vars.ECR_REPO_PROXY }}:${GITHUB_SHA::8}
