--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
----
-
 image:
   name: docker:24.0
 
@@ -7,7 +5,7 @@ services:
   - docker:24.0-dind
 
 before_script:
-  - echo "DOCKERHUB_TOKEN" | docker login -username $DOCKERHUB_USER --password-stdin
+  - echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USER" --password-stdin
 
 stages:
   - Test and Lint
@@ -18,7 +16,7 @@ Python Check:
     - docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
     - docker compose run --rm app sh -c "flake8"
   rules:
-    - if "$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^{main|prod}$/ || $CI_COMMIT_BRANCH =~ /^{main|prod}$/"
+    - if: '$CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "prod"'
 
 Terraform Check:
   stage: Test and Lint
@@ -30,6 +28,5 @@ Terraform Check:
     - docker compose run --rm terraform -chdir=setup/ fmt -check
     - docker compose run --rm terraform -chdir=deploy/ validate
     - docker compose run --rm terraform -chdir=deploy/ fmt -check
-
   rules:
-    - if "$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^{main|prod}$/ || $CI_COMMIT_BRANCH =~ /^{main|prod}$/"
+    - if: '$CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "prod"'
