--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ services:
   - docker:24.0-dind
 
 before_script:
-  - echo "DOCKERHUB_TOKEN" | docker login -username $DOCKERHUB_USER --password-stdin
+  - echo "DOCKERHUB_TOKEN" | docker login -u $DOCKERHUB_USER --password-stdin
 
 stages:
   - Test and Lint
@@ -20,7 +20,7 @@ Python Check:
     - docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
     - docker compose run --rm app sh -c "flake8"
   rules:
-    - if "$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^{main|prod}$/ || $CI_COMMIT_BRANCH =~ /^{main|prod}$/"
+    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /main|prod/ || $CI_COMMIT_BRANCH =~ /main|prod/'
 
 Terraform Check:
   stage: Test and Lint
@@ -32,9 +32,8 @@ Terraform Check:
     - docker compose run --rm terraform -chdir=setup/ fmt -check
     - docker compose run --rm terraform -chdir=deploy/ validate
     - docker compose run --rm terraform -chdir=deploy/ fmt -check
-
   rules:
-    - if "$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^{main|prod}$/ || $CI_COMMIT_BRANCH =~ /^{main|prod}$/"
+    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /main|prod/ || $CI_COMMIT_BRANCH =~ /main|prod/'
 
 Push to ECR:
   stage: Build and Push
@@ -46,13 +45,13 @@ Push to ECR:
     - docker build --compress -t $ECR_REPO_PROXY:$CI_COMMIT_SHA proxy/
     - docker push $ECR_REPO_PROXY:$CI_COMMIT_SHA
   rules:
-    - if "$CI_COMMIT_BRANCH =~ /^{main|prod}$/"
+    - if: '$CI_COMMIT_BRANCH =~ /main|prod/'
 
 Deploy:
   stage: Deploy
   script:
     - |
-      If [{$CICOMMIT_BRANCH == 'prod' }]; then 
+      if [ "$CI_COMMIT_BRANCH" == "prod" ]; then 
         workspace="prod"
       else 
         workspace="staging"
@@ -63,10 +62,5 @@ Deploy:
     - docker compose run --rm terraform -chdir=deploy/ init
     - docker compose run --rm terraform -chdir=deploy/ workspace select $workspace 
     - docker compose run --rm terraform -chdir=deploy/ apply -auto-approve
-
   rules:
-    - if "$CI_COMMIT_BRANCH =~ /^{main|prod}$/"
-
-    
-
-    
+    - if: '$CI_COMMIT_BRANCH =~ /main|prod/'
