--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ services:
   - docker:24.0-dind
 
 before_script:
-  - echo DOCKERHUB_TOKEN | docker login -u $DOCKERHUB_USER --password-stdin
+  - echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USER" --password-stdin
 
 stages:
   - Test and Lint
