push and deploy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,8 +56,8 @@ Deploy:
       else 
         workspace="staging"
       fi
-    - export TF_VAR-ecr_app_image="$ECR_REPO_APP:$CI_COMMIT_SHA"
-    - export TF_VAR-ecr_proxy_image="$ECR_REPO_PROXY:$CI_COMMIT_SHA"
+    - export TF_VAR_ecr_app_image="$ECR_REPO_APP:$CI_COMMIT_SHA"
+    - export TF_VAR_ecr_proxy_image="$ECR_REPO_PROXY:$CI_COMMIT_SHA"
     - cd Infra
     - docker compose run --rm terraform -chdir=deploy/ init
     - docker compose run --rm terraform -chdir=deploy/ workspace select $workspace 
