--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
 ---
-
 image:
   name: docker:24.0
 
@@ -13,10 +12,7 @@ stages:
   - Test and Lint
   - Build and Push
   - Deploy
- .gitlab-ci.yml
   - Destroy
-
- .gitlab-ci.yml
 
 Python Check:
   stage: Test and Lint
@@ -64,11 +60,10 @@ Deploy:
     - export TF_VAR_ecr_proxy_image="$ECR_REPO_PROXY:$CI_COMMIT_SHA"
     - cd Infra
     - docker compose run --rm terraform -chdir=deploy/ init
-    - docker compose run --rm terraform -chdir=deploy/ workspace select $workspace 
+    - docker compose run --rm terraform -chdir=deploy/ workspace select $workspace
     - docker compose run --rm terraform -chdir=deploy/ apply -auto-approve
   rules:
     - if: '$CI_COMMIT_BRANCH =~ /main|prod/'
-      .gitlab-ci.yml
 
 Destroy:
   stage: Destroy
@@ -81,10 +76,8 @@ Destroy:
       fi
     - cd Infra
     - docker compose run --rm terraform -chdir=deploy/ init
-    - docker compose run --rm terraform -chdir=deploy/ workspace select $workspace 
+    - docker compose run --rm terraform -chdir=deploy/ workspace select $workspace
     - docker compose run --rm terraform -chdir=deploy/ destroy -auto-approve
   rules:
-    - if: "$CI_COMMIT_BRANCH =~ /{main|prod} $/"
-      when: manual 
-
-      .gitlab-ci.yml
+    - if: '$CI_COMMIT_BRANCH =~ /main|prod/'
+      when: manual
