--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,23 +1,64 @@
----
-name: Checks
+name: CI/CD Pipeline
 
 on: [push]
 
 jobs:
-  test-lint:
-    name: Test and Lint
+
+  python:
+    name: Test & Lint (Python)
     runs-on: ubuntu-22.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Test
         run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
-
       - name: Lint
         run: docker compose run --rm app sh -c "flake8"
 
+  terraform:
+    name: Test & Lint (Terraform)
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Terraform Init & Validate
+        run: |
+          # Setup
+          cd Infra/setup
+          docker compose run --rm terraform -chdir=. init -backend=false
+          docker compose run --rm terraform -chdir=. validate
+          docker compose run --rm terraform -chdir=. fmt --check
+          
+          # Deploy
+          cd ../deploy
+          docker compose run --rm terraform -chdir=. init -backend=false
+          docker compose run --rm terraform -chdir=. validate
+          docker compose run --rm terraform -chdir=. fmt --check
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-22.04
+    needs: [python, terraform]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Deploy Terraform
+        run: |
+          cd Infra/deploy
+          docker compose run --rm terraform -chdir=. init
+          docker compose run --rm terraform -chdir=. apply -auto-approve
