--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -9,6 +9,14 @@ on:
       DOCKERHUB_TOKEN:
         required: true
         description: "Token for DockerHub auth"
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
+      AWS_DEFAULT_REGION:
+        required: true
+      TF_WORKSPACE:
+        required: true
 
 jobs:
   python:
@@ -33,20 +41,27 @@ jobs:
   terraform:
     name: Terraform
     runs-on: ubuntu-22.04
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Terraform lint
         run: |
-          cd Infra/
-          docker compose run --rm terraform -chdir=deploy/ init -backend=false
+          cd Infra
           docker compose run --rm terraform -chdir=setup/ init -backend=false
           docker compose run --rm terraform -chdir=setup/ validate
           docker compose run --rm terraform -chdir=setup/ fmt --check
+          docker compose run --rm terraform -chdir=deploy/ init -backend=false
           docker compose run --rm terraform -chdir=deploy/ validate
           docker compose run --rm terraform -chdir=deploy/ fmt --check
