--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -46,19 +46,27 @@ jobs:
           docker compose run --rm terraform -chdir=. fmt --check
 
   deploy:
-    name: Deploy
-    runs-on: ubuntu-22.04
-    needs: [python, terraform]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Deploy Terraform
-        run: |
-          cd Infra/deploy
-          docker compose run --rm terraform -chdir=. init
-          docker compose run --rm terraform -chdir=. apply -auto-approve
+      name: Deploy
+      runs-on: ubuntu-22.04
+      needs: [python, terraform]
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+
+        - name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKERHUB_USER }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+        - name: Deploy Terraform
+          run: |
+            cd Infra/deploy
+            docker compose run --rm terraform -chdir=. init
+            docker compose run --rm terraform -chdir=. apply -auto-approve
+
