--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   app:
     build:
@@ -51,7 +49,8 @@ services:
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
       - TF_WORKSPACE=${TF_WORKSPACE}
-      - TF_VAR_db_password=${TF_VAR_DB_PASSWORD}
+      - TF_VAR_db_password=Pakistan@Zindabad!RyanSaad@25
+
 
 volumes:
   postgres-data:
