--- a/Infra/docker-compose.yml
+++ b/Infra/docker-compose.yml
@@ -10,3 +10,5 @@ services:
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
       - TF_WORKSPACE=${TF_WORKSPACE}
+      - TF_VAR_db_password=${TF_VAR_db_password}
+      - TF_VAR_ecr_proxy_image=${TF_VAR_ecr_proxy_image}
