--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -56,8 +56,8 @@ jobs:
       TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
       TF_VAR_db_password: ${{ secrets.TF_VAR_DB_PASSWORD }}
       TF_VAR_django_secret_key: ${{ secrets.TF_VAR_DJANGO_SECRET_KEY }}
-      TF_VAR_ecr_proxy_image: ${{ secrets.ECR_REPO_PROXY }}
-      TF_VAR_ecr_app_image: ${{ secrets.ECR_REPO_APP }}
+      TF_VAR_ecr_proxy_image: ${{ vars.ECR_REPO_PROXY }}
+      TF_VAR_ecr_app_image: ${{ vars.ECR_REPO_APP }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
